--- a/grid.html
+++ b/grid.html
@@ -19,7 +19,7 @@
     <div class="section-sidebar">SIDE BAR</div>
    </div>
 
-    <div class="section-footer">FOOTER</div>
+    <div class="section-footer">Atik FOOTER</div>
     </section>
 </body>
 </html>
